# LogoMatcher

./: .gitignore  BUILD_SUCCESS_SUMMARY.md  CMakeLists.txt  CMakeLists_enhanced_broken.txt  CMakeLists_enhanced_build.txt  COMPREHENSIVE_FEATURE_EXTRACTION_SUMMARY.md  LogoMatcher_Colab.ipynb  MODULAR_CLUSTERING_COMPLETE.md  ONE_PAGER.md  PRESENTATION.md  README.md  README_ARCHITECTURE.md  adaptive_cluster_analysis.py  advanced_clustering_analysis.py  advanced_logo_clusterer.py  advanced_logo_clusterer_copy.py  analyze_distribution.py  better_recovery.py  build_module.py  check_similarities.py  cluster_analysis_20251019_191348.txt  cluster_analysis_20251019_193311.txt  cluster_analysis_20251019_201411.txt  cluster_analysis_20251019_202653.txt  cluster_analysis_20251019_203438.txt  cluster_analysis_20251019_205412.txt  clustering_dashboard.html  complete_pipeline.py  comprehensive_scraper.py  config.json  create_clustering_visualizations.py  debug_logo_structure.py  enhanced_fourier_logo_analyzer.py  enhanced_fourier_math.cpp  enhanced_fourier_math.hpp  enhanced_lightning_pipeline.py  enhanced_python_bindings.cpp  extract_logos_to_jpg.py  final_summary.py  fourier_logo_analyzer.py  (+52 more)
.github/workflows/: logo-clustering.yml
build_enhanced/: CMakeCache.txt  Makefile  cmake_install.cmake
cloudflare-worker/: worker.js  wrangler.toml
clustering_visualizations/: README.md  visualization_summary.txt
optimized_clustering/: ARCHITECTURE.md  INDEX.md  MIGRATION.md  README.md  SUMMARY.md  __init__.py  brand_intelligence.py  clusterer.py  clustering_engine.py  config.py  examples.py  feature_extractor.py  hashing.py  run_clustering.py  test_modules.py  visual_analyzer.py  visualizer.py
